<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobileODR</string>
    <string name="title_section1">Capture</string>
    <string name="title_section2">History</string>
    <string name="title_section3">Help</string>
    <string name="action_settings">Settings</string>
    <string name="version">0.73</string>
    <string name="app_desc">SFU 4D Labs - Mobile ODR Detector Version 0.73. Press the button to capture the image of a test strip.</string>
    <string name="btn_capture">Capture</string>
    <string name="status">Status: Capture Mode</string>
    <string name="helpText">SFU 4D Labs - Mobile ODR Detector Version 0.73.\n\nNavigate to the capture tab and press the button to capture the image of a test strip.</string>
    <string name="stripLabel01">I(s)</string>
    <string name="stripLabel02">ODR</string>
    <string name="strip1Label">S1: </string>
    <string name="strip2Label">S2: </string>
    <string name="strip3Label">S3: </string>
    <string name="strip4Label">S4: </string>
    <string name="IB">I(b): </string>
    <string name="contentDesc">SFU 4D Labs Mobile ODR Detector</string>

</resources>