<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$CaptureFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:textSize="11sp" >

        <FrameLayout
            android:id="@+id/frameLayout1"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_gravity="center"
            android:layout_weight="0.8" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center|fill"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_desc"
                android:scaleType="fitXY"
                android:src="@drawable/grid_vertical" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ZoomControls
                    android:id="@+id/zoomControls1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/refreshButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_capture" />
            </LinearLayout>

            <TextView
                android:id="@+id/statusText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:padding="2dip"
                android:text="@string/status" />

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dip" >

                    <TextView
                        android:id="@+id/sLabel0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/sLabel01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/stripLabel01" />

                    <TextView
                        android:id="@+id/sLabel02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/stripLabel02" />
                </TableRow>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dip" >

                    <TextView
                        android:id="@+id/sLabel1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/strip1Label" />

                    <TextView
                        android:id="@+id/sText1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3" />

                    <TextView
                        android:id="@+id/sText1b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dip" >

                    <TextView
                        android:id="@+id/sLabel2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/strip2Label" />

                    <TextView
                        android:id="@+id/sText2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3" />

                    <TextView
                        android:id="@+id/sText2b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dip" >

                    <TextView
                        android:id="@+id/sLabel3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/strip3Label" />

                    <TextView
                        android:id="@+id/sText3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3" />

                    <TextView
                        android:id="@+id/sText3b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dip" >

                    <TextView
                        android:id="@+id/sLabel4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/strip4Label" />

                    <TextView
                        android:id="@+id/sText4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3" />

                    <TextView
                        android:id="@+id/sText4b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dip" >

                    <TextView
                        android:id="@+id/sLabel5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/IB" />

                    <TextView
                        android:id="@+id/IBText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3" />

                    <TextView
                        android:id="@+id/IBTextBlank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>